--- a/rules
+++ b/rules
@@ -1,1 +1,90 @@
-Правил нет
+1. Общение
+Соблюдайте адекватность: оскорбления и пренебрежительное отношение к игрокам и администрации запрещены. Наказание возможно независимо от причины.
+Вносите вклад в дружное комьюнити: проявляйте терпимость и решайте конфликты без грубости.
+Оптимизируйте общение с администрацией: мы готовы помочь в разрешении проблем без взаимных оскорблений.
+Отделяйте игровую реальность: конфликты в игре остаются игровыми, а не реальными. Уважайте собеседников.
+Ограничения на язык: нецензурная лексика допустима в IC чате, но запрещена в ООС чате и при общении с администрацией.
+
+2.1. Игровая атмосфера
+Не вмешивайтесь в чужие ситуации, к которым не имеете отношения.
+Не мешайте игрокам в игровых ситуациях: не бегайте, не прыгайте, не катайтесь на машине вокруг них, нарушая атмосферу.
+Избегайте нелогичного поведения: не ездите на крыше автомобиля, если нет мест для пассажиров, за исключением кабриолетов с задними местами.
+Действуйте с IC-мотивацией: не ведите игровые действия на основе ООС-мотивов или вопреки здравому смыслу.
+Технические драки имеют ограничения: не бегайте по кругу, не прячьтесь от драки на пассажирском сиденье автомобиля.
+Если у вашей машины повреждено более 2 колес, остановитесь.
+Не преувеличивайте физические способности персонажа без обоснования.
+Не преувеличивайте психологические возможности персонажа без обоснования.
+Не преувеличивайте материальные и социальные возможности персонажа без обоснования.
+После серьезного ДТП прекратите движение.
+Запрещена провокация полиции на погоню.
+Не допускается реклама интим-услуг и поиск партнёров через объявления G:BUY.
+Нельзя использовать G:BUY или команду /action для продажи огнестрельного оружия.
+
+2.2. Использование оружия гражданскими лицами
+Для применения оружия, в том числе убийства, требуется весомая причина. Показ оружия и угрозы не являются равнозначными стрельбе и убийству.
+Не считается весомой причиной:
+Оскорбление вас или вашей семьи.
+Физический конфликт или драка с другим персонажем.
+Личная антипатия к другому персонажу или его действиям.
+Считается весомой причиной:
+Угроза вашей жизни от одного или нескольких лиц.
+Наличие свидетелей, способных помешать вашему сюжету или операции.
+Тщательно спланированное убийство на специальных локациях.
+
+3. Имя вашего персонажа: правила и ограничения
+Имя вашего персонажа не должно быть сокращением, например Leha или Sanek. Используйте полные формы, как например Alexander или Alexey, аналогичные тому, как они были бы записаны в паспорте.
+Запрещено использование имён, совпадающих с именами известных личностей.
+Имя персонажа должно соответствовать его национальности. Если есть несоответствие, необходимо описать это в одобренной биографии персонажа или в процессе регистрации через UCP.
+Имя и фамилия персонажа должны быть в одной национальной парадигме. Например, не допускаются сочетания вроде Vladimir_Catalino или Brandon_Kalashnikov. Если требуется разное происхождение имени и фамилии, это также должно быть описано в одобренной биографии персонажа или при регистрации через UCP.
+
+4. Ролевая игра животных: особенности собак
+Собаки, как наиболее активные домашние питомцы, могут быть взаимодействующими персонажами в ролевой игре.
+Для отыгрыша роли собаки используйте формат NickName: "Кличка собаки"_Dog.
+Если вы хотите играть роль собаки, в заявке на UCP отвечайте на вопросы, представляясь человеком. В графе "Квента" описывайте вашего персонажа - собаку.
+
+5. Отказ от игры и взаимодействия
+В случае, когда вы сталкиваетесь с некомпетентностью оппонента или другими причинами, не прерывайте ситуацию. Доведите её до конца, а затем отправьте жалобу на форум.
+Если другой игрок допускает мелкие нарушения, но при этом старается играть свою роль, не прерывайте ситуацию. Можете дать подсказку через /pm и указать на ошибки, избегая оскорблений и флуда. Отказ от игры сравнивается с выходом из ролевой ситуации.
+Вторая стадия смерти требует отыгрыша, если её доведение до этой стадии не вызвано системными обстоятельствами. Взаимодействие с SA-ES, в том числе с полицией, следует решать в игре. Не переносите IC проблемы на OOC уровень.
+Если вас обращаются или взаимодействуют с вами другие игроки, реагируйте на это адекватно. Не игнорируйте действия оппонента, отреагируйте в /do или поясните, почему вы не можете реагировать. Уход без реакции считается отказом от игры.
+
+6. Metagaming (MG)
+Metagaming – использование внеигровой информации внутриигрово (IC). Это крайне серьезное нарушение.
+Игра вне игры (ООС) означает действия без связи с IC процессом, обмен информацией через ООС каналы, а также злоупотребление этой информацией.
+Пример: узнав о свидетеле преступления из скриншота на форуме, вы убираете его в игре; по предупреждению в социальной сети о возможной смерти в игре вы не входите в игру.
+Блокировка персонажа на 10-30 дней.
+
+7. Bunny Hopping (BH)
+Запрещены прыжки, увеличивающие скорость передвижения персонажа.
+1 предупреждение (warn).
+
+8. Злоупотребление ООС чатом
+Во время ролевой ситуации дискуссии без необходимости запрещены. Пообщайтесь с друзьями через /pm. Злоупотребление ООС чатом наказуемо. Пишите в ООС чат только необходимое, избегая флуда. Злоупотребление ООС чатом нарушает игровую атмосферу.
+1 предупреждение (warn).
+
+9. Character Kill (CK)
+Character Kill – полное уничтожение персонажа. Игроку, которого убили, выдается бан с статусом СК. Он должен создать новый аккаунт, используя новое имя и роль. Имущество обнуляется. Использование купона на смену роли запрещено.
+Статус игрока определяется сервером в соответствии с системой стадий и урона. Если над персонажем написано "мертв", он получает СК; если "ранен", СК не выдается. Спорные ситуации решает следящий администратор.
+
+10. Faction Character Kill (FCK)
+Faction Character Kill (FCK) - это полное уничтожение роли через убийство персонажа фракцией в игре. Этот статус присваивается при наличии запроса от руководства фракции и допущении его в игре. FCK могут получить только члены или аутсайдеры криминальной организации.
+Руководство организации имеет право на FCK и другие меры в отношении своих членов внутри организации по их усмотрению.
+Решение о FCK от лидера и руководства организации может быть оспорено в разделе жалоб. Обязателен период взаимодействия внутри фракции не менее трех дней.
+Для присвоения FCK фракция должна предоставить доказательства ситуации, которая привела к этому решению и последствиям. FCK не присваивается при взаимодействии фракции с лицами, не связанными с организацией.
+Необходима вторая стадия смерти или отыгрыш самой смерти для присвоения FCK, независимо от стадии или типа ранения.
+
+11. Player Kill (PK)
+Player Kill (PK) – убийство игрока, не причиняющее ущерба его основной роли. PK имеет частный характер, не прерывает игру основной роли и часто связан с уличными перестрелками, не включающими крупнокалиберное оружие. При получении PK персонаж забывает обстоятельства, приведшие к убийству. Доступ к игре ограничивается на 90 минут.
+
+12. Revenge Kill (RK)
+Revenge Kill (RK) – убийство игрока в ответ на то, что он убил вас, независимо от того, был ли выставлен PK или CK. Смерть означает забвение ситуации полностью, как для вас, так и для вашего убийцы.
+Блокировка персонажа на 3-10 дней.
+
+13. Drive-by (DB)
+Запрещена стрельба из автомобиля и наезд на игрока с целью убийства или нанесения урона. Это предоставляет большое преимущество стреляющему игроку.
+Блокировка персонажа на 5-20 дней.
+Блокировка всего аккаунта навсегда.
+
+14. Deathmatch (DM)
+Deathmatch (DM) – убийство без весомой IC причины или нанесение урона без объяснения мотивов. Если у вас нет обоснования для убийства и вы не можете объяснить его, администрация может наказать вас.
+Блокировка персонажа или аккаунта навсегда.
