--- a/rules
+++ b/rules
@@ -268,5 +268,91 @@ G:BUY или доска объявлений
 В мобильном приложении существует иконка G:BUY. Это информационная площадка, направленная на взаимодействие между игроками. С её помощью вы можете что-либо приобрести, продать или просто прорекламировать какие-либо услуги.
 Использование команды /action с целью рекламы чего-либо в IC процессе является нарушением, для этого есть вышеописанная система внутриигровой площадки.
 
-30. Террористические акты и крупные организованные преступления
+30. Тер. акты и крупные ОП
+- Ваша фракция должна быть одобренной или официальной.
+- Для теракта должен быть подготовлен подробный план самого акта, а так же взаимодействия всех участников с приведенными скриншот-ситуациями, одобренные куратором крайм сегмента и отделов принимающих участие или затрагиваемых в ходе ситуации.
+- Для крупных криминальных ситуаций Вы так же обязаны получить одобрение от куратора крайм сегмента и отделов затрагиваемых в ходе ситуации.
 
+Между каждым терактом или крупной ситуацией вводится промежуток в 14 дней. Действия, приведенные выше, во время данного интервала — запрещаются. Проведение такой ситуации без ведома администрации строго запрещено и карается наказанием. Целесообразным будет, перед исполнением замысла написать в репорт и запросить администратора на ситуацию.
+
+31. Дорожно-транспортные происшествия
+Отыгрывать ДТП не обязательно, если:
+- Две или более сторон согласны на откат ДТП. Подобное обговаривается в /pm или /b с участниками.
+
+Отыгрывать ДТП обязательно, если:
+- Происшествие совершено при погоне, рейде. Данное происшествие серьезное и несет за собой смерть людей, высокие материальные потери.
+
+31.1 Неролевое поведение на дорогах.
+Если вы ведете себя неадекватно на дороге, преувеличивая физические возможности вашего персонажа или же автомобиля, сбивая столбы, съезжая с большой высоты и так далее, вы попадаете под данный пункт правил. В случае если вы участвуете в погоне, быстро двигаетесь, но при этом не сбиваете столбы и не попадаете в ДТП, данные действия считаются допустимыми.
+
+32. Взлом аккаунтов и утеря доступа к нему
+Администрация несет ответственность за аккаунт если:
+- Был установлен Google Auth.
+- Был привязан аккаунт Telegram
+
+Администрация не несет ответственность за аккаунт если:
+- Если способы защиты аккаунта не были использованы.
+- Вы используете модификации и CLEO скрипты.
+
+33. Игра в тюрьме (Взаимодействие с SADCR)
+SADCR (San Andreas Department of Corrections&Rehabilitation) - Федеральная тюрьма, со-значение реабилитации игроков и прямого взаимодействия с ними. Данное правило напрямую регулирует положение в тюрьме и ее атмосферы.
+
+33.1 Драки в тюрьме.
+Чтобы устроить драку в тюрьме, нужно как минимум 2 действующих офицеров коррекции на смене. Для массовой драки от 5 офицеров.
+При летальном исходе осужденного в ходе урегулирования ситуации/драки, игроку выдают бан/статус СК, в зависимости от его желания. Время бана выбирает напрямую администратор, после анализа ситуации.
+
+33.2 Бунт / Массовая забастовка.
+Перед тем как организовать бунт, нужно сделать СС на организацию и планировку бунта, где четко будет показано что, где, а главное как вы собираетесь. Эта СС считается подготовительной, поэтому играет важную роль. СС выкладывается на форум.
+Бунт проводится при онлайне офицеров от 7 на смене. При том, если бунт был подавлен летальным исходом для игрока, в том или ином случае, игроку выдается статус СК, ибо игрок должен понимать что он идет на риск.
+
+33.3 Побег.
+Побег отыгрывается с подготовительной СС, СС выкладывается на форум.
+При отыгрыше подготовительного этапа, важно прямое взаимодействие с игроками/офицерами.
+Побег производится, когда офицеров на смене, как минимум 8.
+В случае того, если в процессе побега вашего персонажа довели до 2 стадии/убили, вам выдается статус СК.
+
+33.4 Контрабанда / Изготовление заточек.
+Для изготовления заточек требуется СС, где показано как вы ее изготовили. Сама СС должна быть на форуме и одобрена администрацией, после этого она имеет Ролевое значение.
+Внутренняя/Внешняя контрабанда действует, после того как вы выложили СС на форум, где четко видно взаимодействие игрока с предметом. В случае отсутствия СС на форуме, Администратор в праве выдать вам наказания за нрп инвентарь.
+Любая нонРП передача через забор/перекидывание карается БАНом/ВАРНом.
+
+33.5 УДО (Условно-Досрочное Освобождение).
+На игроке со статусом "Условно-Досрочное-Освобождение" одет специальный браслет, при котором SADCR имеет право следить за его передвижением. При выводе из строя браслета/его снятие, от игрока требуется СС с процессом всех его взаимодействий с предметом. СС должна быть одобрена Администрацией.
+При запросе вашего местонахождение офицером Коррекции, вы должны дать точное местонахождение, так как на вас надет браслет с датчиком.
+
+34. Мародёрство. Погоня за наживой.
+- Обыскивать трупы с целью наживы.
+- Обыскивать брошенные автомобили, как государственных структур, так и гражданских лиц.
+- Убивать игрока с целью получить его оружие. Забрать оружие можно лишь с его согласия, независимо от наличия стадии у жертвы. Исключением может быть решение администратора на ситуации.
+
+35. Монополия и финансовая стабильность.
+Запрещено завышать себестоимость имущества выше чем в 2 раза. Если ваш дом стоит 10 000, вы можете продать его за 20 000, а не за 2 000 000.
+
+36. Атмосфера дорожного движения.
+- Главная и второстепенная дорога.
+- Помеха справа.
+- Скоростной режим.
+- Возможности и аспекты поведения вашего персонажа.
+- Повороты направо с крайнего правого ряда.
+- Повороты налево с крайнего левого ряда.
+
+37. Похищения.
+В случае похищения персонажа вы обязаны проводить с ним игру, направленную на его убийство, удержание или освобождение. В случае отсутствия игры в течении 24-х часов по вине похитителей, ситуация откатывается, а похищенное лицо подлежит немедленному освобождению. В случае намеренного отказа от игры путем отсутствия в игре более 24-х часов без веской на то причины, похитители имеют право написать жалобу на похищенного игрока. Наказание в данном случае устанавливается на усмотрение ассистентов и главы crime раздела.
+
+39. Правила GBUY.
+GBUY - приложение в телефоне пользователей, с помощью которого осуществляется продажа, покупка, обмен, знакомства, поиск работы и прочие социальные взаимодействия. Исходя из обширности применения данного ресурса, необходимо следовать ряду ограничений.
+
+39.01. Реклама мероприятий.
+- Открыт клуб - владелец создаёт 1 объявление об открытии - разрешено.
+- Открыт клуб - 2 и более игроков подают объявление об открытии клуба - запрещено.
+
+39.02. Продажа запрещенных предметов.
+Запрещена завуалированная продажа запрещенных законодательством города вещей. Явные примеры: холодное и огнестрельное оружие, наркотики.
+
+39.03. Интим.
+Открытая и прямая реклама интимных услуг или знакомств запрещена.
+
+40. Лояльное отношение.
+- Офицер полиции в момент задержания и отыгрыша ролевой ситуации, получил удовольствие от игры с оппонентом. В рамках благодарности за игру, он имеет право "не увидеть" пистолет, либо же не посадить в КПЗ. Сопроводив всё это в IC процессе.
+- Игроку, в момент ограбления понравилась ситуация и он решил в рамках благодарности за игру, отдать грабителям предмет, который в рамках правил он не обязан отдавать. Так же как и грабители, могут не забирать у жертвы всю сумму.
+- В ходе перестрелки или рейда, полицейским понравилась ситуация и ее исход, что они решили попросить администрацию заменить CK на PK.
